--- a/resource/css/common.css
+++ b/resource/css/common.css
@@ -83,12 +83,12 @@ ul.grp_check{display: flex;}
 .grp_check > li+li{margin-left: 15px;}
 .grp_check input[type="checkbox"] { position: absolute;left:1px;top:1px;width: 0px;height: 0px;} 
 .grp_check input[type="checkbox"]:focus + label{outline: 2px solid #000;border-radius: 3px;}
-.grp_check label { position: relative; display:inline-flex; align-items: center; padding-left: 42px; font-size: 18px; color:#000; cursor: pointer; line-height: 34px; font-weight: 700;} 
-.grp_check label:before { content:''; flex:none;position: absolute;left:0; display: inline-block;margin-right: 5px; width:34px; height: 34px; border-radius:8px; box-sizing: border-box; background: #F3F4F6;border:1px solid #DEE2E6} 
-.grp_check label:after { content: ''; position: absolute; left: 8px; top: 9px; width: 14px; height: 6px; border: 2px solid #DEE2E6; border-width: 0 0 4px 4px; transform: rotate(-45deg); } 
+.grp_check label { position: relative; display:inline-flex; align-items: center; padding-left: 35px; font-size: 15px; color:#000; cursor: pointer; line-height: 25px; font-weight: 600;} 
+.grp_check label:before { content:''; flex:none;position: absolute;left:0; display: inline-block;margin-right: 10px; width:25px; height: 25px; border-radius:5px; box-sizing: border-box; background: #fff;border:1px solid #DEE2E6} 
+.grp_check label:after { content: ''; position: absolute; left: 5px; top: 7px; width: 12px; height: 5px; border: 2px solid #DEE2E6; border-width: 0 0 3px 3px; transform: rotate(-45deg); } 
 .grp_check input[type="checkbox"]:checked + label:before { background: #2962F6;}
 .grp_check input[type="checkbox"]:checked + label:after{border-color: #fff;}
-.grp_check > a{font-weight: 700;font-size: 16px;line-height: 26px;text-decoration-line: underline;color: #ADB5BD;margin-left: 10px;}
+.grp_check > a{font-weight: 700;font-size: 14px;text-decoration-line: underline;line-height: 25px;color: #ADB5BD;margin-left: 10px;}
 .grp_check.small label{font-size: 15px;line-height: 24px;padding-left: 32px;font-weight: 400;}
 .grp_check.small label::before{width: 24px;height: 24px;border-radius: 4px;}
 .grp_check.small label:after {left:6px;top:6px}
@@ -109,29 +109,87 @@ header .header_inner{max-width: 1280px;width: 100%;margin: 0 auto;display: flex;
 .section_inner{max-width:1280px;margin: 0 auto;box-sizing: border-box;}
 .section_inner h2{font-size: 26px;font-weight: 700;line-height: 140%;color:#212529}
 
+article{max-width:1280px;margin: 0 auto;box-sizing: border-box;}
 article h2{margin-bottom: 14px;font-size: 26px;font-weight: 700;line-height: 140%;color:#212529}
 
 .sec_main01{padding: 30px 0 50px;}
 .sec_main01 .box_layout > .img {width: 800px;height: 800px;}
 .sec_main01 .box_layout > .img img{width: 100%;height: 100%;}
-.sec_main01 .box_layout .box_form{border:1px solid #DEE2E6;border-radius: 10px;padding:42px;text-align: center;}
+.sec_main01 .box_layout .box_form{border:1px solid #DEE2E6;border-radius: 10px;padding:42px 70px;text-align: center;}
 .sec_main01 .tit_sub{margin: 5px 0 20px;line-height: 140%;font-size: 15px;font-weight: 600;}
 
+.box_layout .box_form .check{margin-top: 20px;}
+.box_layout .box_form .check p{font-size: 15px;font-weight: 600;}
+.box_layout .box_form .grp_check{margin-top: 10px;}
+.box_layout .box_form button{display: flex;align-items: center;justify-content: center;width: 200px;height: 55px;}
+
 .list_main{display: flex;gap: 20px;}
-.list_main > li{flex:1;border-radius: 10px;padding: 30px;box-sizing: border-box;}
+.list_main > li{flex:1;border-radius: 10px;}
+.list_main > li > a{display: flex;flex-direction: column;padding: 30px;box-sizing: border-box;text-decoration: none;height: 100%;color: #212529;border-radius: 10px;}
 .list_main > li .grp_badge{display: flex;align-items: center;}
-.list_main > li .grp_badge .badge{flex:none;padding: 9px 11px;font-size: 15px;font-weight: 700;line-height: 140%;border:1px solid #fff;color: #fff;border-radius: 30px;box-sizing: border-box;}
-.list_main > li .grp_badge .badge + .badge{margin-left: 10px;}
-.list_main > li p{font-size: 22px;font-weight: 900;line-height: 130%;}
+.list_main > li .grp_badge .badge{flex:none;padding: 10px 12px 8px;font-size: 15px;font-weight: 500;line-height: 140%;border:1px solid #fff;color: #fff;border-radius: 30px;box-sizing: border-box;}
+.list_main > li .grp_badge .badge + .badge{margin-left: 6px;}
+.list_main > li p.tit{font-size: 22px;font-weight: 700;line-height: 130%;}
+.list_main > li p.arrow{display: flex;align-items: center;font-size: 18px;line-height: 140%;font-weight: 600;}
+.list_main > li p.arrow::after{content: '';display: inline-block;width: 25px;height: 25px;background: url(../images/ico_arrow.svg) right center no-repeat;}
+.list_main > li strong{font-weight: 700;display: inline-block;}
 
 .list_main.type01 > li{height: 328px;}
 .list_main.type01 > li:nth-child(1){background-color: #4D6BBA}
 .list_main.type01 > li:nth-child(2){background-color: #F37F9B}
 .list_main.type01 > li:nth-child(3){background-color: #5DB7BA}
 .list_main.type01 > li:nth-child(4){background-color: #EF9859}
-.list_main.type01 > li p{color:#fff}
+.list_main.type01 > li p{color:#fff;margin-top: 15px;}
+.list_main.type01 > li p.arrow{margin-top: auto;font-weight: 19px;}
+.list_main.type01 > li p.arrow::after{background: url(../images/ico_arrow_w.svg) right center no-repeat;}
 
-footer{background-color: #232B4C;}
+.list_main.type02{margin-top: 20px;}
+.list_main.type02 > li{height:280px;}
+.list_main.type02 > li a{border:1px solid #DEE2E6;}
+.list_main.type02 > li:nth-child(1) a{background: url(../images/img_main02_1.svg) no-repeat right center;}
+.list_main.type02 > li:nth-child(2) a{background: url(../images/img_main02_2.svg) no-repeat right center;}
+.list_main.type02 > li p.tit{margin-top: 20px;}
+.list_main.type02 > li p.txt_sub{margin-top: 10px;color:#495057;line-height: 140%;font-weight: 500;font-size: 18px;}
+
+.grid_main{display: grid;gap: 20px;margin: 20px auto 0;max-width: 1280px;grid-template-columns:1fr 305px;grid-template-rows: 320px 280px 240px;}
+.grid_main article{width: 100%;}
+.list_main.type03 > li{height:320px;}
+.list_main.type03 > li a{background: #F1F3F5;}
+.list_main.type03 > li:nth-child(1) a{background:#F1F3F5 url(../images/img_main03_1.svg) no-repeat right 30px bottom 30px;}
+.list_main.type03 > li:nth-child(2) a{background:#F1F3F5 url(../images/img_main03_2.svg) no-repeat right 30px bottom 30px;}
+.list_main.type03 > li:nth-child(3) a{background:#F1F3F5 url(../images/img_main03_3.svg) no-repeat right 30px bottom 30px;}
+.list_main.type03 > li p.tit{margin-top: 15px;}
+
+.list_main.type04 > li{height:230px;}
+.list_main.type04 > li a{border:1px solid #DEE2E6;}
+.list_main.type04 > li p{line-height: 140%;font-size: 20px;}
+.list_main.type04 > li p.arrow{margin-bottom:auto;font-size: 18px;}
+
+.list_customer {display: flex;align-items: center;justify-content: space-around;height:240px;border:1px solid #DEE2E6;border-radius: 10px;box-sizing: border-box;}
+.list_customer > *{flex:1;text-align: center;position: relative;}
+.list_customer > *+*:after{content:'';position: absolute;top:50%;left:0;margin-top: -13px;border-left:1px solid #D2D2D2;height: 26px;}
+.list_customer h2{font-size: 28px;}
+.list_customer .grp_call{display: flex;flex-direction: column;align-items: center;justify-content: center;}
+.list_customer .grp_call:before{content:'';display: block;width: 28px;height: 27px;background: url(../images/ico_call.svg) no-repeat center;}
+.list_customer .grp_call .call{margin-top: 10px;font-size: 32px;line-height: 140%;font-weight: 600;}
+.list_customer .grp_call .time{margin-top: 10px;font-size: 18px;line-height: 130%;color:#868E96}
+.list_customer .grp_talk{display: flex;flex-direction: column;align-items: center;justify-content: center;}
+.list_customer .grp_talk:before{content:'';display: block;width: 27px;height: 25px;background: url(../images/ico_talk.svg) no-repeat center;}
+.list_customer .grp_talk p{margin-top: 10px;font-size: 26px;font-weight: 700;line-height: 140%;}
+.list_customer .grp_talk a{display: flex;align-items: center;justify-content: center;margin-top: 10px;width: 160px;height: 50px;border-radius: 25px;background-color: #FFE812;font-size: 16px;font-weight: 700;;color:#381F1F;text-decoration: none;;}
+
+.box_logo{grid-column: 2 / 3;grid-row: 1 / 4;height: 100%;}
+.box_logo .list_logo{display: flex;flex-direction: column;height: 100%;gap: 20px;}
+.box_logo .list_logo li{display: flex;flex-direction: column;align-items: center;justify-content: center;border-radius: 10px;height: 160px;}
+.box_logo .list_logo li:nth-child(1){background: #E9F8FE;color:#004599}
+.box_logo .list_logo li:nth-child(2){background: #FAF6F1;color:#7C7365}
+.box_logo .list_logo li:nth-child(3){background: #E7F9EB;color:#007E41}
+.box_logo .list_logo li:nth-child(4){background: #FFF4D8;color:#071F53;}
+.box_logo .list_logo li:nth-child(5){background: #FFEEF4;color:#000000}
+.box_logo .list_logo li .badge{display: flex;align-items: center;justify-content: center;height: 50px;padding:0 20px;background: #fff;border-radius: 25px;}
+.box_logo .list_logo li p{font-size: 28px;line-height: 140%;font-weight: 800;margin-top: 10px;}
+
+footer{margin-top: 50px;background-color: #232B4C;}
 footer .section_inner{position: relative;padding: 50px 0; width: 1000px;display: flex;}
 footer .info .f_logo{display: flex;align-items: center;}
 footer .info .f_logo br{display: none;}
