모바일 수정

--- a/resource/css/common.css
+++ b/resource/css/common.css
@@ -357,26 +357,30 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.svg) no-repeat 
     .list_main.type02 > li p.txt_sub{font-size: 14px;}
 
     .grid_main{max-width: 500px;grid-template-columns: 1fr;grid-template-rows: auto;gap: 30px;}
-    .grid_main article h2{}
     
     .box_logo{grid-column:1/1;grid-row: 3/3;}
     .box_logo .list_logo{height: auto;}
     .box_logo .list_logo li{height: 136px;}
     .box_logo .list_logo li p{font-size: 22px;}
 
+    .list_main.type03 > li{height: auto;}
     .list_main.type03 > li p.tit{margin-top: 10px;}
+    .list_main.type03 > li:nth-child(1) a{background-position:center right 20px;background-size: 100px;}
+    .list_main.type03 > li:nth-child(2) a{background-position:center right 20px;background-size: 85px;}
+    .list_main.type03 > li:nth-child(3) a{background-position:center right 20px;background-size: 100px;}
+    .list_main.type04 > li{height: auto;}
     .list_main.type04 > li p.arrow{margin-bottom: 10px;}
 
     .list_customer{height: auto;padding: 20px 0;flex-wrap: wrap;}
     .list_customer h2{width: 100%;flex:none;font-size: 22px;margin-bottom: 20px;}
     .list_customer > *+*:after{display: none;}
     .list_customer .grp_call .call{font-size: 24px;}
-    .list_customer .grp_call .time{font-size: 13px;}
+    .list_customer .grp_call .time{font-size: 13px;letter-spacing: -1px;}
     .list_customer .grp_talk p{font-size: 16px;}
     .list_customer .grp_talk a{font-size: 15px;width: 140px;}
     
     footer{margin-top: 30px;}
-    footer .footer_inner{padding: 20px 10px;flex-direction: column;max-width: 500px;box-sizing: border-box;}
+    footer .footer_inner{padding: 20px;flex-direction: column;max-width: 500px;box-sizing: border-box;}
     footer .list_footer{justify-content: center;}
     footer .list_footer li a{font-size: 14px;}
     footer .info .f_logo{margin-top: 230px;}
