--- a/resource/css/common.css
+++ b/resource/css/common.css
@@ -215,6 +215,11 @@ footer .f_btn{margin-left: auto;flex:none;display: flex;flex-direction: column;}
 footer .f_btn a{display: flex;align-items: center;width: 230px;height: 95px;padding-left: 25px;text-align: left;box-sizing: border-box;background: #2F3B6B url(../images/img_footer01.svg) no-repeat center right 25px;font-weight: 700;font-size: 18px;line-height: 150%;color: #FFFFFF;border-radius: 10px;text-decoration: none;}
 footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.svg) no-repeat center right 25px ;margin-top: 20px;}
 
+/* sub */
+.tab_wrap{background: #F1F3F5;}
+.tab_wrap .section_inner{padding:50px 0}
+.tab_wrap ul{display: flex;align-items: center;}
+
 /* 반응형 - 태블릿 */
 @media screen and (max-width: 1280px) and (min-width: 962px) {
     header {height: 60px;}
