--- a/resource/css/common.css
+++ b/resource/css/common.css
@@ -120,8 +120,9 @@ article h2{margin-bottom: 14px;font-size: 26px;font-weight: 700;line-height: 140
 .sec_main01 .box_layout .swiper-pagination-bullet{width: 14px;height: 14px;border-radius: 7px;transition: all 0.4s;}
 .sec_main01 .box_layout .swiper-pagination-bullet-active{width: 34px;background: #2962F6;}
 .sec_main01 .box_layout .box_form{height: 800px;border:1px solid #DEE2E6;border-radius: 10px;padding:40px 60px;text-align: center;box-sizing: border-box;}
-.sec_main01 .tit_sub{margin: 5px 0 20px;line-height: 140%;font-size: 15px;font-weight: 600;color:#495057}
 
+.box_layout .box_form h2{text-align: center;}
+.box_layout .box_form .tit_sub{margin: 5px 0 20px;line-height: 140%;font-size: 15px;font-weight: 600;color:#495057;text-align: center;}
 .box_layout .box_form .check{margin-top: 20px;}
 .box_layout .box_form .check p{font-size: 15px;font-weight: 600;}
 .box_layout .box_form .grp_check{margin-top: 10px;}
@@ -221,7 +222,7 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.svg) no-repeat 
 .tab_wrap ul{display: flex;align-items: center;height: 200px;gap: 20px;}
 .tab_wrap ul li{height: 100%;flex:1;}
 .tab_wrap ul li a{display: flex;flex-direction: column;align-items: center;justify-content: center;height: 100%;color:#ADB5BD;text-decoration: none;background-color: #fff;border-radius: 10px;box-sizing: border-box;}
-.tab_wrap ul li a::before{content: '';display: block;width: 60px;height: 60px;}
+.tab_wrap ul li a::before{flex:none;content: '';display: block;width: 60px;height: 60px;}
 .tab_wrap ul li:nth-child(1) a::before{background: url(../images/ico_tabwrap01.png) center no-repeat; background-size: 60px;}
 .tab_wrap ul li:nth-child(2) a::before{background: url(../images/ico_tabwrap02.png) center no-repeat; background-size: 60px;}
 .tab_wrap ul li:nth-child(3) a::before{background: url(../images/ico_tabwrap03.png) center no-repeat; background-size: 60px;}
@@ -230,8 +231,9 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.svg) no-repeat 
 .tab_wrap ul li a .grp_badge{display: flex;align-items: center;gap: 6px;margin-top: 10px;}
 .tab_wrap ul li a .grp_badge .badge{display: flex;align-items: center;justify-content: center;padding:10px;height: 38px;border-radius: 30px;border:1px solid #2962F6;color:#2962F6;box-sizing: border-box;font-size: 13px;font-weight: 700;}
 .tab_wrap ul li a p.tit{margin-top: 10px;font-size: 15px;font-weight: 600;line-height: 140%;text-align: center;}
-.tab_wrap ul li.on a{border: 3px solid #2962F6;color:#2962F6;font-weight: 700;}
+.tab_wrap ul li.on a{border: 3px solid #2962F6;color:#2962F6;}
 .tab_wrap ul li.on a .grp_badge .badge{background: #2962F6;color:#fff}
+.tab_wrap ul li.on a p.tit{font-weight: 700;}
 
 .cont_wrap{padding-top: 50px;}
 .cont_wrap .box_text h2{font-size: 32px;line-height: 130%;margin-bottom: 20px;}
@@ -274,7 +276,7 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.svg) no-repeat 
     .sec_main01 .box_layout .swiper-pagination-bullet{width: 10px;height: 10px;border-radius: 5px;}
     .sec_main01 .box_layout .swiper-pagination-bullet-active{width: 24px;}
     .sec_main01 .box_layout .box_form{height: 560px;padding: 30px 36px;}
-    .sec_main01 .tit_sub{margin: 4px 0 14px;font-size: 10px;}
+    .box_layout .box_form .tit_sub{margin: 4px 0 14px;font-size: 10px;}
     .box_layout .box_form .check{margin-top: 14px;}
     .box_layout .box_form .check p{font-size: 10px;}
     .box_layout .box_form button{height: 38px;border-radius: 28px;width: 140px;font-size: 12px;}
@@ -339,6 +341,15 @@ footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.svg) no-repeat 
     footer .info p+p{margin-top: 7px;}
     footer .f_btn a{width: 161px;height: 66px;font-size: 12px;padding-left: 18px;background-size: 35px;background-position: center right 17px;}
     footer .f_btn a+a{margin-top: 14px;background-size: 35px;background-position: center right 17px;}
+
+    /* 서브페이지 */
+    .tab_wrap .section_inner{padding:35px 0}
+    .tab_wrap ul{height: 140px;gap: 14px;}
+    .tab_wrap ul li a::before{width: 42px;height: 42px;background-size: 42px !important;}
+    .tab_wrap ul li a .grp_badge{margin-top: 7px;}
+    .tab_wrap ul li a .grp_badge .badge{font-size: 10px;height: 28px;border-radius: 21px;padding: 0 7px;}
+    .tab_wrap ul li a p.tit{font-size: 12px;margin-top: 7px;}
+
 }
 /* 반응형 - 모바일 */
 @media screen and (max-width: 961px) {
