--- a/resource/css/common.css
+++ b/resource/css/common.css
@@ -213,8 +213,8 @@ footer .info p span+a::before{content: '';position: absolute;left: 0;top:50%;hei
 footer .info p+p{margin-top: 15px;}
 footer .info .strong{font-weight: 700;}
 footer .f_btn{margin-left: auto;flex:none;display: flex;flex-direction: column;}
-footer .f_btn a{display: flex;align-items: center;width: 230px;height: 95px;padding-left: 25px;text-align: left;box-sizing: border-box;background: #2F3B6B url(../images/img_footer01.svg) no-repeat center right 25px;font-weight: 700;font-size: 18px;line-height: 150%;color: #FFFFFF;border-radius: 10px;text-decoration: none;}
-footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.svg) no-repeat center right 25px ;margin-top: 20px;}
+footer .f_btn a{display: flex;align-items: center;width: 230px;height: 95px;padding-left: 25px;text-align: left;box-sizing: border-box;background: #2F3B6B url(../images/img_footer01.png) no-repeat center right 25px;background-size: 50px;font-weight: 700;font-size: 18px;line-height: 150%;color: #FFFFFF;border-radius: 10px;text-decoration: none;}
+footer .f_btn a+a{background: #2F3B6B url(../images/img_footer02.png) no-repeat center right 25px;background-size: 49px;margin-top: 20px;}
 
 /* sub */
 .tab_wrap{background: #F1F3F5;}
